--- a/HydroColor/Platforms/iOS/Info.plist
+++ b/HydroColor/Platforms/iOS/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIFileSharingEnabled</key>
+	<true/>
 	<key>UIDeviceFamily</key>
 	<array>
 		<integer>1</integer>
@@ -37,8 +39,10 @@
 	<false/>
 	<key>CFBundleIdentifier</key>
 	<string>com.H2Optics.HydroColor</string>
+	<key>CFBundleDisplayName</key>
+	<string>HydroColor</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.0</string>
+	<string>2.1</string>
 	<key>MinimumOSVersion</key>
 	<string>14.2</string>
 </dict>
