--- a/HydroColor/Platforms/iOS/Info.plist
+++ b/HydroColor/Platforms/iOS/Info.plist
@@ -42,8 +42,10 @@
 	<key>CFBundleDisplayName</key>
 	<string>HydroColor</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.1</string>
+	<string>2.2</string>
 	<key>MinimumOSVersion</key>
 	<string>14.2</string>
+	<key>CFBundleVersion</key>
+	<string>5</string>
 </dict>
 </plist>
