--- a/HydroColor/HydroColor.csproj
+++ b/HydroColor/HydroColor.csproj
@@ -1,13 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net7.0-ios;net7.0-android</TargetFrameworks>
+		<TargetFrameworks>net9.0-ios;net9.0-android</TargetFrameworks>
+    <RuntimeIdentifiers Condition="$(TargetFramework.Contains('-android'))">android-arm;android-arm64;android-x86;android-x64</RuntimeIdentifiers>
 
 		<OutputType>Exe</OutputType>
 		<RootNamespace>HydroColor</RootNamespace>
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
+    <MauiEnableXamlCBindingWithSourceCompilation>true</MauiEnableXamlCBindingWithSourceCompilation>
 
 		<!-- Display name -->
 		<ApplicationTitle>HydroColor</ApplicationTitle>
@@ -20,11 +22,11 @@
 		<ApplicationDisplayVersion>2.3</ApplicationDisplayVersion>
 		<ApplicationVersion>6</ApplicationVersion>
 
-		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">14.2</SupportedOSPlatformVersion>
+		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">15.0</SupportedOSPlatformVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">21.0</SupportedOSPlatformVersion>
 	</PropertyGroup>
 
-	<PropertyGroup Condition="'$(TargetFramework)'=='net7.0-ios' and '$(Configuration)' == 'Debug'">
+	<PropertyGroup Condition="'$(TargetFramework)'=='net9.0-ios' and '$(Configuration)' == 'Debug'">
 	  <CodesignKey>Apple Development: Created via API (S4222GC659)</CodesignKey>
 	  <CodesignProvision>VS: WildCard Development</CodesignProvision>
 	</PropertyGroup>
@@ -35,30 +37,32 @@
 		<CodesignProvision>HydroColorProvProfile</CodesignProvision>
 	</PropertyGroup>
   
-  <PropertyGroup Condition="'$(TargetFramework)'=='net7.0-ios'">
+  <PropertyGroup Condition="'$(TargetFramework)'=='net9.0-ios'">
+    <ProvisioningType>automatic</ProvisioningType>
     <CodesignKey>Apple Development: Created via API (S4222GC659)</CodesignKey>
     <CodesignProvision>VS: com.H2Optics.HydroColor Development</CodesignProvision>
   </PropertyGroup>
-
-
+  
 
   <ItemGroup>
 		<!-- App Icon -->
 				<!-- App icon must be scaled down to 80% size on Android, otherwise it is cut off-->
     <MauiIcon Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'" Include="Resources\AppIcon\appicon.svg" ForegroundScale="0.8" BaseSize="456,456" Color="#000000" />
 
-    <!-- App icon for all other platforms -->
-    <MauiIcon Include="Resources\AppIcon\appicon.svg" BaseSize="456,456" Color="#000000" />
+    <!-- App icon for iOS platform -->
+    <MauiIcon Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'" Include="Resources\AppIcon\appicon.svg" BaseSize="456,456" Color="#000000" />
 
 		<!-- Splash Screen -->
     <MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#000000" BaseSize="128,128" />
     
 		<!-- Images -->
-    <MauiImage Include="Resources\Icons\about_icon.png" BaseSize="30,30" /> <!-- On iOS, the tab icons are not automutomatically resized, they must be set to 30x30px-->
-    <MauiImage Include="Resources\Icons\library_icon.png" BaseSize="30,30" />
-    <MauiImage Include="Resources\Icons\collect_data_icon.png" BaseSize="30,30" />
 		<MauiImage Include="Resources\Images\*" />
     <MauiImage Include="Resources\Icons\*" />
+
+			<!-- On iOS, the tab icons are not automutomatically resized, they must be set to 30x30px-->
+    <MauiImage Update="Resources\Icons\about_icon.png" BaseSize="30,30" />
+    <MauiImage Update="Resources\Icons\library_icon.png" BaseSize="30,30" />
+    <MauiImage Update="Resources\Icons\collect_data_icon.png" BaseSize="30,30" />
 
 		<!-- Custom Fonts -->
 		<MauiFont Include="Resources\Fonts\*" />
@@ -68,11 +72,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="CommunityToolkit.Maui" Version="6.1.0" />
-	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
-	  <PackageReference Include="MailKit" Version="4.3.0" />
-	  <PackageReference Include="Microsoft.Maui.Controls.Maps" Version="7.0.101" />
-	  <PackageReference Include="SendGrid" Version="9.28.1" />
+    <PackageReference Include="Microsoft.Maui.Controls" Version="9.0.21" />
+	  <PackageReference Include="CommunityToolkit.Maui" Version="10.0.0" />
+	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+	  <PackageReference Include="MailKit" Version="4.9.0" />
+	  <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="9.0.21" />
+	  <PackageReference Include="Microsoft.Maui.Controls.Maps" Version="9.0.21" />
+	  <PackageReference Include="SendGrid" Version="9.29.3" />
 	</ItemGroup>
 
 	<ItemGroup>
