--- a/HydroColor/Platforms/Android/AndroidManifest.xml
+++ b/HydroColor/Platforms/Android/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.h2optics.hydrocolor" android:versionCode="14" android:versionName="2.3">
 	<application android:allowBackup="true" android:icon="@mipmap/appicon" android:supportsRtl="false" android:label="HydroColor">
-		<meta-data android:name="com.google.android.geo.API_KEY" android:value="<google_maps_API_key>" />
+		<meta-data android:name="com.google.android.geo.API_KEY" android:value="<google_api_key>" />
 		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
 	</application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -19,5 +19,5 @@
 			<action android:name="android.media.action.IMAGE_CAPTURE" />
 		</intent>
 	</queries>
-	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="33" />
+	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="35"/>
 </manifest>
